CDPD-73619: CDPD-69136 [ui-editor] prevent clipping of text in AiPreviewModal
(cherry picked from commit ca2f9406de899a919072db852087272aab0bf5f2)
(cherry picked from commit 0d71c151830caf82da3b12a6cbc552eb92219eb0)
(cherry picked from commit a1ce9e717df12e7f9ec9b25e2b0c75b0bc1600e8)
(cherry picked from commit 1eab867a685e92527b40c8037fd5fa08e8017bf6)

--- a/desktop/core/src/desktop/js/apps/editor/components/AiAssist/PreviewModal/AiPreviewModal.scss
+++ b/desktop/core/src/desktop/js/apps/editor/components/AiAssist/PreviewModal/AiPreviewModal.scss
@@ -21,6 +21,7 @@
 @use 'mixins';
 
 $top: 100px; // Same value as specified in cuix
+$usefulMinHeight: 100px;
 
 // We need to get the cuix class in but we can't add it to the root
 .ant-modal-root {
@@ -46,10 +47,12 @@ $top: 100px; // Same value as specified in cuix
       .ant-modal-body {
         display: flex;
         flex-direction: column;
-        overflow: hidden;
+        overflow: auto;
 
         .hue-ai-preview-modal__diff-highlighter {
-          max-height: 80%;
+          min-height: $usefulMinHeight;
+          flex: 1 1 auto;
+          overflow: scroll;          
           min-width: 540px;
           display: flex;
           flex-direction: column;
@@ -60,8 +63,14 @@ $top: 100px; // Same value as specified in cuix
           }
         }
 
-        .hue-preview-info-panels {
+        .hue-preview-info-panels, .hue-preview-warning-panels {
+          min-height: $usefulMinHeight;
           overflow: auto;
+          flex: 1 1 auto;
+        }
+
+        .hue-inline-alert-check {
+          flex: 1 1 auto;
         }
       }
     }
